[package]
name = "dprint_plugin_malva"
version = "0.2.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Malva as dprint plugin."
repository = "https://github.com/g-plane/malva"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.65", default-features = false, features = [
    "wasm",
] }
malva = { path = "../malva", features = ["config_serde"] }
serde_json = "1.0"
