[package]
name = "malva-cli"
version = "0.0.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "CLI for malva."
repository = "https://github.com/g-plane/malva"
license = "MIT"

[dependencies]
malva = { path = "../malva", features = ["config_serde"] }
serde_json = "1.0"

[[bin]]
name = "malva"
path = "src/main.rs"
doc = false
