[package]
name = "malva"
version = "0.9.1"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Configurable, smart and fast CSS, SCSS, Sass and Less formatter."
repository = "https://github.com/g-plane/malva"
license = "MIT"
exclude = ["/tests"]

[dependencies]
aho-corasick = "1.1"
itertools = "0.13"
memchr = "2.7"
raffia = "0.9"
serde = { version = "1.0", optional = true }
tiny_pretty = "0.2"

[dev-dependencies]
insta = { version = "1.39", features = ["glob"] }
similar-asserts = "1.5"
toml = "0.8"

[features]
config_serde = ["raffia/config_serde", "serde"]
