[package]
name = "malva"
version = "0.13.1"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Configurable, smart and fast CSS, SCSS, Sass and Less formatter."
repository = "https://github.com/g-plane/malva"
license = "MIT"
exclude = ["/tests"]

[dependencies]
aho-corasick = "1.1"
itertools = "0.14"
memchr = "2.7"
raffia = "0.11"
serde = { version = "1.0", optional = true }
tiny_pretty = "0.2"

[dev-dependencies]
insta = { version = "1.43", features = ["glob"] }
similar-asserts = "1.7"
toml = "0.9"

[features]
config_serde = ["raffia/config_serde", "serde"]
