[package]
name = "malva"
version = "0.15.3"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Configurable, smart and fast CSS, SCSS, Sass and Less formatter."
repository = "https://github.com/g-plane/malva"
license = "MIT"
exclude = ["/tests"]

[dependencies]
aho-corasick = "1.1"
itertools = "0.14"
memchr = "2.8"
raffia = "0.12"
serde = { version = "1.0", optional = true }
tiny_pretty = "0.4"

[dev-dependencies]
insta = { version = "1.47", features = ["glob"] }
similar-asserts = "2.0"
toml = "1.1"

[features]
config_serde = ["raffia/config_serde", "serde"]
