[package]
name = "malva_cli"
version = "0.0.0"
edition = "2021"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "CSS/SCSS/Sass/Less formatter."
repository = "https://github.com/g-plane/malva"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
globset = "0.4"
malva = { path = "../malva", features = ["config_serde"] }
serde_json = "1.0"
tokio = { version = "1.32", features = [
    "fs",
    "io-std",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
toml = "0.7"
walkdir = "2.4"

[[bin]]
name = "malva"
path = "src/main.rs"
doc = false
